--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,14 @@
 ---
-title: "blog"
+title: ""
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: false
   filter-ui: false
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
 
 
