--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Post With Code"
-author: "Harlow Malloc"
-date: "2022-08-28"
+author: "Camilo García"
+date: today
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
