--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,30 @@
 ---
 title: ""
 listing:
-  contents: posts
-  sort: "date desc"
-  type: grid
-  categories: true
-  sort-ui: false
-  filter-ui: false
+  - id: "blog"
+    contents: posts
+    sort: "date desc"
+    type: grid
+    categories: true
+    sort-ui: false
+    filter-ui: false
+  # - id: meeting-notes
+  #   contents: publications/pubs.qmd
+  #   sort: "date desc"
+  #   categories: true
+  #   sort-ui: false
+  #   filter-ui: false
+  #   type: table
 page-layout: full
 title-block-banner: false
 ---
+<!-- 
+## Blog
 
+:::{#blog}
+:::
 
+## Publications
+
+:::{#meeting-notes}
+::: -->
