update first posts w/ tidytuesday old code

--- a/posts/2022-08-31-Coffee-TT/index.qmd
+++ b/posts/2022-08-31-Coffee-TT/index.qmd
@@ -1,11 +1,11 @@
 ---
 title: "What's the best coffee?"
 categories: [tidytuesday, code, analysis]
-author: Camilo García
 date: today
 toc: true
 fig-height: 15
 fig-width: 15
+image: "thumbnail.jpg"
 ---
 
 # Introduction
