--- a/posts/2022-08-31-Coffee-TT/index.qmd
+++ b/posts/2022-08-31-Coffee-TT/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "What's the best coffee?"
 categories: [tidytuesday, code, analysis]
-date: today
+date: 2020-07-20
 toc: true
 fig-height: 15
 fig-width: 15
