--- a/posts/2022-09-27-Artists-TT/artists.qmd
+++ b/posts/2022-09-27-Artists-TT/artists.qmd
@@ -6,6 +6,8 @@ toc: true
 date: 2021-09-27
 ---
 
+This posts cover the code and figures from the datascience workshop with R, where we explore some basics from `dplyr` and `ggplot2` packages using the `tidytuesday` data set from the current week (2021-09-27). 
+
 # Importing libraries
 
 ```{r}
