--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ listing:
   - id: "blog"
     contents: posts
     sort: "date desc"
-    type: default
+    type: grid
     categories: true
     sort-ui: false
     filter-ui: false
