change df again and restore cache and freeze

--- a/posts/2020-09-01-Netflix-TT/netflix.qmd
+++ b/posts/2020-09-01-Netflix-TT/netflix.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Netflix titles per country"
 date: 2021-04-30
-categories: [news, code, analysis, tidytuesday, animated]
+categories: [code, analysis, tidytuesday]
 image: "image.jpg"
 execute: 
   cache: true
