--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,12 @@
 ---
 title: ""
 listing:
-  - id: "blog"
-    contents: posts
-    sort: "date desc"
-    type: grid
-    categories: true
-    sort-ui: false
-    filter-ui: false
+   id: "blog"
+   contents: posts
+   type: grid
+   categories: true
+   fields: [image, title, description, categories, date, reading-time]
+   max-description-length: 150
   # - id: meeting-notes
   #   contents: publications/pubs.qmd
   #   sort: "date desc"
@@ -15,6 +14,7 @@ listing:
   #   sort-ui: false
   #   filter-ui: false
   #   type: table
+date-format: iso
 page-layout: full
 title-block-banner: false
 ---
